...
    <string name="requested">Requested</string>
    <string name="upload_failure">Upload failed</string>
    <string name="word_count_exceeded">Reason must have less than 3 words</string>
    <string name="mood">Mood</string>
    <string name="social_situation">Social Situation</string>
    <string name="reason">Reason</string>
    <string name="filter_happy">Happy</string>
    <string name="filter_sad">Sad</string>
    <string name="filter_angry">Angry</string>
    <string name="filter_excited">Excited</string>
    <string name="filter_confused">Confused</string>
    <string name="filter_scared">Scared</string>
    <string name="filter_jealous">Jealous</string>
    <string name="reason_placeholder">None</string>
    <string name="location_label">Location</string>
    <string name="location_placeholder">None</string>
    <string name="location_checkbox">Use current location?</string>
    <string name="previous_location_checkbox">Use previous location?</string>
    <string name="location_hint">Search for a location</string>
    <string name="location_clear">(Clear)</string>
...
